--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="container">
     <div class="subscribe-box">
       <h1>Subscribe via SMS</h1>
-      <p>Join our newsletter by sending the following message:</p>
+      <p>Join our Disaster response by sending the following message:</p>
       <p class="instructions"><strong>"join mistake-direct"</strong></p>
       <p>to the number:</p>
       <p class="number">+1 (415) 523-8886</p>
